--- a/src/app/shared/components/navbar/navbar-component/navbar-component.html
+++ b/src/app/shared/components/navbar/navbar-component/navbar-component.html
@@ -94,7 +94,7 @@
       <button
         *ngIf="isAuthenticated"
         class="p-2 theme-text-primary hover:text-orange-500 transition-colors"
-      >
+        (click)="router.navigate(['/profile'])"      >
         <lucide-icon [img]="User" size="20"></lucide-icon>
       </button>
 
