--- a/src/app/pages/home/restaurant/restaurant-component.html
+++ b/src/app/pages/home/restaurant/restaurant-component.html
@@ -1,3 +1,4 @@
+<!-- temp -->
 <section class="bg-white py-8">
   <div class="container mx-auto px-4">
     <div class="flex items-center justify-between mb-8">
@@ -19,7 +20,8 @@
         class="bg-white rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300 p-4">
         <div class="w-full relative ">
           <img [src]="chef.foodImage" alt="Chef's food" class="w-full h-48 object-cover rounded-lg">
-          <img [src]="chef.image" [alt]="chef.name" class="w-32 h-32 rounded-full object-cover absolute top-1/2 left-3 -translate-y-1/2">
+          <img [src]="chef.image" [alt]="chef.name"
+            class="w-32 h-32 rounded-full object-cover absolute top-1/2 left-3 -translate-y-1/2">
         </div>
         <div class="flex items-start gap-4 mt-5">
           <!-- chef Information -->
@@ -40,11 +42,64 @@
 
 
 
-        <button class="w-full mt-4 py-2 bg-orange-600 text-white rounded-lg
+        <button (click)="getRestaurants()" class="w-full mt-4 py-2 bg-orange-600 text-white rounded-lg
                        hover:bg-orange-700 transition-colors duration-300">
           View Menu
         </button>
       </div>
     </div>
+  </div>
+</section>
+<!-- temp -->
+
+
+
+
+
+<section class="bg-white py-8">
+  <div class="container mx-auto px-4">
+    <h2 class="text-2xl font-bold">Restaurant (Chef)</h2>
+    <h3 class="text-xl font-semibold mb-6">Home Chefs</h3>
+    <div class="grid grid-cols-1 xl:grid-cols-4 gap-4">
+      <!-- cards -->
+      <div class="col-span-3 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-6">
+        <div *ngFor="let restaurant of restaurants"
+          class="bg-white rounded-lg shadow-sm hover:shadow-md transition-shadow duration-300 p-4">
+          <div class="w-full relative ">
+            <img [src]="restaurant.imageUrl" alt="restaurant's food" class="w-full h-48 object-cover rounded-lg">
+            <img src="https://cdn-icons-png.flaticon.com/512/4825/4825015.png" [alt]="restaurant.name"
+              class="w-20 h-20 rounded-full object-cover absolute top-1/4 left-3 -translate-y-1/2">
+          </div>
+          <div class="flex items-start gap-4 mt-5">
+            <!-- restaurant Information -->
+            <div>
+              <h4 class="font-semibold">{{restaurant.name}}</h4>
+              <p class="text-gray-500 text-sm">{{restaurant.location}} / location</p>
+              <div class="flex items-center gap-2 mt-2">
+                <div class="flex items-center">
+                  <span class="text-sm font-medium">{{restaurant.rating}}</span>
+                  <span class="text-yellow-400">★</span>
+                </div>
+                <span class="text-sm text-gray-500">{{restaurant.description}} description</span>
+                <!-- <span class="text-sm text-gray-500">{{restaurant.openingHours}} Opening Time</span> -->
+              </div>
+            </div>
+            <!-- restaurant Information -->
+          </div>
+
+
+
+          <button (click)="getRestaurants()" class="w-full mt-4 py-2 bg-orange-600 text-white rounded-lg
+                       hover:bg-orange-700 transition-colors duration-300">
+            View Menu
+          </button>
+        </div>
+      </div>
+      <!-- cards -->
+       <!-- sideFilterBar -->
+       <app-filter></app-filter>
+       <!-- sideFilterBar -->
+    </div>
+
   </div>
 </section>
