--- a/src/app/chef/chef-dashboard/chef-dashboard-component/chef-dashboard-component.html
+++ b/src/app/chef/chef-dashboard/chef-dashboard-component/chef-dashboard-component.html
@@ -49,7 +49,7 @@
               Add Items
             </button>
             <button
-              (click)="ViewItems()"
+              (click)="ViewMenu()"
               class="px-4 py-2 bg-orange-500 text-white rounded-lg hover:bg-orange-600 transition-colors duration-200"
             >
               View All Items
