--- a/src/app/shared/components/filters/filter-restaurant-view/filter-restaurant-view.html
+++ b/src/app/shared/components/filters/filter-restaurant-view/filter-restaurant-view.html
@@ -1,5 +1,4 @@
-<!-- Side Filter -->
-<div class="w-80 bg-white border-r border-gray-200 h-screen overflow-y-auto">
+<div class="w-80 bg-white border-r border-gray-200  overflow-y-auto">
   <!-- Filter Header -->
   <div class="p-6 border-b border-gray-200">
     <div class="flex items-center justify-between">
@@ -7,26 +6,6 @@
       <button class="text-sm text-orange-600 hover:text-orange-700 font-medium transition-colors">
         Clear All
       </button>
-    </div>
-  </div>
-
-  <!-- Categories Filter -->
-  <div class="p-6 border-b border-gray-200">
-    <h3 class="text-lg font-medium text-gray-900 mb-4">Categories</h3>
-    <div class="space-y-3">
-      <!-- categories items -->
-      @for (category of categories; track category) {
-      <div class="flex items-center">
-        <input [name]="category.name" type="checkbox" (change)="onCategoryChange($event.target)" value="{{category.name}}"
-          class="w-4 h-4 text-orange-600 bg-gray-100 border-gray-300 rounded focus:ring-orange-500 focus:ring-2">
-        <label for="category-mexican" class="ml-3 flex-1 text-sm text-gray-700 cursor-pointer">
-          {{category.name}}
-          <span class="text-gray-400 ml-1">(8)</span>
-        </label>
-      </div>
-      }
-
-
     </div>
   </div>
 
@@ -82,3 +61,4 @@
     </button>
   </div>
 </div>
+
