--- a/src/app/pages/home/restaurant/restaurant-component.html
+++ b/src/app/pages/home/restaurant/restaurant-component.html
@@ -32,7 +32,7 @@
 
 
 
-          <button (click)="loadRestaurants()" class="w-full mt-4 py-2 bg-orange-600 text-white rounded-lg
+          <button (click)="showRestaurantDetails(restaurant.id)" class="w-full mt-4 py-2 bg-orange-600 text-white rounded-lg
                        hover:bg-orange-700 transition-colors duration-300">
             View Menu
           </button>
