--- a/src/app/pages/cart/order-summary/order-summary.component.html
+++ b/src/app/pages/cart/order-summary/order-summary.component.html
@@ -6,6 +6,9 @@
     <div class="space-y-4">
       <app-order-body></app-order-body>
       <app-order-promocode></app-order-promocode>
+      <div class="w-100 bg-orange-400 p-2 text-center font-bold rounded-full">
+        <a href="#">Continue to Checkout</a>
+      </div>
     </div>
   </div>
 </div>
