creating DTOs for cart items

--- a/src/app/shared/components/navbar/navbar-component/navbar-component.html
+++ b/src/app/shared/components/navbar/navbar-component/navbar-component.html
@@ -92,7 +92,7 @@
       <!-- Show cart only if authenticated -->
       <a
         *ngIf="isAuthenticated"
-        routerLink="/cart"
+        routerLink="/customer/cart"
         class="relative p-2 theme-text-primary hover:text-orange-500 transition-colors"
       >
         <lucide-icon [img]="ShoppingCart" size="20"></lucide-icon>
